# whalealert

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.cpp  settings.h  settings.ui
